--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "seed": "node server/seed.js",
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack",
+    "start": "nodemon server/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
